pihole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
spec:
  selector:
    app: pihole
  ports:
  - name: pihole-admin
    port: 80
    targetPort: 80
  type: ClusterIP
